--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maquette lincorn</title>
+    <title>Maquette lincorne</title>
     <link rel="stylesheet" href="styles.css"
 </head>
 
+<!--contenu-->
 <body>
+    <header>
+        <nav>
+            <h1 class="titre">Mon licorne</h1>
+            <div class="right">
+                <a href="#Le principe">PRINCIPE</a>
+                <a href="#Nos licornes">NOS LICORNES</a>
+                <a href="#Nous trouver">NOUS TROUVER</a>
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
