--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maquette lincorne</title>
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <!--contenu-->
 <body>
     <header>
         <nav>
-            <h1 class="titre">Mon licorne</h1>
+            <div>
+                <a href="index.html"><em>MonLicorne</em></a>
+            </div>
             <div class="right">
                 <a href="#Le principe">PRINCIPE</a>
                 <a href="#Nos licornes">NOS LICORNES</a>
